--- a/app/index.html
+++ b/app/index.html
@@ -11,5 +11,6 @@
 	</body>
 	
 	<!-- <script src="./bundle.js"></script> -->
+	<script type="text/javascript" src="markdown-it.min.js"></script>
 	<script type="text/javascript" src="http://127.0.0.1:8080/lib/bundle.js"></script>
 </html>
